Aggiunta funzione di add e remove sul cart
